src/FinancialForce Accounting/objects/codaPaymentMediaSummary__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>Holds information for payment transmission including payment values summarized by account and the corresponding bank account details.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Media Summaries</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountNumber__c</fullName>
        <label>Destination Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountReference__c</fullName>
        <label>Destination Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankCity__c</fullName>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankCountry__c</fullName>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankIbanNumber__c</fullName>
        <label>Bank IBAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankSortCode__c</fullName>
        <label>Destination Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankStateProvince__c</fullName>
        <label>Bank State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BankSwiftNumber__c</fullName>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankZipPostalCode__c</fullName>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStateProvince__c</fullName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillingZipPostCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountValueTotal__c</fullName>
        <label>Discount Value Total</label>
        <summarizedField>codaPaymentMediaDetail__c.Discount__c</summarizedField>
        <summaryForeignKey>codaPaymentMediaDetail__c.PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DiscountValue__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GrossValueTotal__c</fullName>
        <label>Gross Value Total</label>
        <summarizedField>codaPaymentMediaDetail__c.OriginalValue__c</summarizedField>
        <summaryForeignKey>codaPaymentMediaDetail__c.PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payment Media Summaries (Company)</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayeeName__c</fullName>
        <label>Destination Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentControlCurrency__c</fullName>
        <label>Payment Control Currency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMediaControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Media Control</label>
        <referenceTo>codaPaymentMediaControl__c</referenceTo>
        <relationshipLabel>Payment Media Summaries</relationshipLabel>
        <relationshipName>PaymentMediaSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentReference__c</fullName>
        <label>Payment Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentValueTotal__c</fullName>
        <label>Payment Value Total</label>
        <summarizedField>codaPaymentMediaDetail__c.PaymentValue__c</summarizedField>
        <summaryForeignKey>codaPaymentMediaDetail__c.PaymentMediaSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReasonCode__c</fullName>
        <label>Reason Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Media Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>GrossValue__c</columns>
        <columns>DiscountValue__c</columns>
        <columns>PaymentValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Media Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>